--- a/configs/cubietruck_defconfig
+++ b/configs/cubietruck_defconfig
@@ -15,6 +15,7 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="sun7i-a20-cubietruck"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_HTOP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
